--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/kuzey.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="İzmir Bornova 24 saat açık tekel bayii" data-rh="true"/>
     <title>Kuzey Tekel</title>
   </head>
   <body>
