--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/kuzey.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="İzmir Bornova 24 saat açık tekel bayii" data-rh="true"/>
+    <meta name="google-site-verification" content="64soQ3lvL_uthDMnB3Jb-MDwNS38ob_KJ9dgLDlvrBw" />
     <title>Kuzey Tekel</title>
   </head>
   <body>
