--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/kuzey.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="İzmir Bornova 24 saat açık tekel bayii" data-rh="true"/>
+
+    <!-- seo -->
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta property="og:locale" content="tr_TR">
+    <title>Kuzey Tekel - İzmir Bornova 24 Saat Açık Tekel Bayi</title>
+    <meta name="description" content="Kuzey Tekel, İzmir Bornova'da sizler için 24 saat hizmet vermekteyiz. Sigara, alkol, içki ve atıştırmalıklar için en geniş seçenekleri sunuyoruz." data-rh="true">
+    <metaname="keywords" content="tekel bayi, tekel, açık tekel, alkol, alkol fiyatları, bira, bira fiyatları " />
     <meta name="google-site-verification" content="64soQ3lvL_uthDMnB3Jb-MDwNS38ob_KJ9dgLDlvrBw" />
-    <title>Kuzey Tekel</title>
+    <meta property="og:url" content="https://kuzey-tekel.vercel.app">
+    <meta property="og:site_name" content="İzmir Açık Market">
+    <meta property="og:title" content="İzmir açık tekel">
+    <meta property="og:type" content="article">
+    <meta name="author" content="aelita">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+https://kuzey-tekel.vercel.app/products/tuborg-gold.jpg
