--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <meta property="og:title" content="İzmir açık tekel">
     <meta property="og:type" content="article">
     <meta name="author" content="aelita">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11341089163">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11341089163');
+</script>
   </head>
   <body>
     <div id="root"></div>
