--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- seo -->
-    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="robots" content="noindex, nofollow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta property="og:locale" content="tr_TR">
     <title>Kuzey Tekel - İzmir Bornova 24 Saat Açık Tekel Bayi</title>
     <meta name="description" content="Kuzey Tekel, İzmir Bornova'da sizler için 24 saat hizmet vermekteyiz. Sigara, alkol, içki ve atıştırmalıklar için en geniş seçenekleri sunuyoruz." data-rh="true">
